--- a/testingChan.cfg
+++ b/testingChan.cfg
@@ -25,6 +25,13 @@ MATH_PROBLEM= DIRECT
 % Restart solution (NO, YES)
 RESTART_SOL= NO
 
+
+% Time-average the solution fields
+TEMPORAL_AVERAGING = YES
+
+% channel flow ?
+CHANNEL_FLOW_SIMULATION = YES
+
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
@@ -103,7 +110,7 @@ UNST_CFL_NUMBER= 0.1
 CFL_NUMBER= 0.125
 %
 % Number of total iterations
-EXT_ITER= 1
+EXT_ITER= 10
 
 % ------------------ FEM FLOW NUMERICAL METHOD DEFINITION ----------------------%
 %
@@ -154,7 +161,7 @@ CAUCHY_FUNC_FLOW= DRAG
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= referenceGrid.su2
+MESH_FILENAME= referenceGrid_p4.su2
 %
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
